# onai-ocr-app

./: .dockerignore  .gitignore  AGENTS.md  DEPLOY_DOKPLOY.md  FLUJO_INFERENCIA_TIPOS.md  GIT_SETUP_COMMANDS.md  PLAN_MAESTRO.md  README.md  TESTING_GUIDE.md  docker-compose.prod.yml  docker-compose.yml
01_fuentes/: README.md
02_contexto/: arquitectura_actual.md  decisiones.md  deuda_tecnica.md  matriz_riesgos.md  mc2_estado.md  resumen_ejecutivo.md
03_specs/: README.md  SPEC-00_plan_maestro.md  SPEC-01_rag_seguro_multitenant.md  SPEC-02_batch_inbox.md  SPEC-03_r2_cleanup.md  SPEC-04_planes_stripe_billing.md  SPEC-05_admin_dashboard.md  SPEC-06_ci_cd_deploy.md  SPEC-07_monitoring_observabilidad.md  SPEC-08_onboarding.md  SPEC-09_dominio_produccion.md
04_trabajo/: README.md
05_entregables/: README.md
backend/: .dockerignore  .env.example  ADVANCED_FIELD_HOMOLOGATION.md  DOCUMENT_TYPE_DELETE_SAFETY.md  Dockerfile  ENV_CONFIGURATION_SMART_OCR.md  GEMINI_VISION_UPGRADE.md  GOOGLE_DRIVE_QUICKSTART.md  GOOGLE_DRIVE_SETUP.md  GOOGLE_TOKEN_PERSISTENCE.md  IMPLEMENTATION_SUMMARY.md  INFER_FROM_SAMPLES_IMPLEMENTATION.md  MIGRATION_CASCADE_DELETE.sql  MIGRATION_CASCADE_README.md  (+9 more)
processor/: .dockerignore  DEPRECATED.md  Dockerfile  pyproject.toml
processor/app/: config.py  main.py
processor/app/graph/: batch_graph.py
processor/app/graph/nodes/: classify.py  homologate.py  process_type.py  validate.py
processor/app/models/: schemas.py  state.py
processor/app/services/: db_service.py  drive_service.py  gemini_service.py
processor/app/utils/: rate_limiter.py
(+131 files in other folders)
